# django-manga-rater

./: README.md  db.sqlite3  manage.py  pyproject.toml
manga_app/: models.py  tests.py  urls.py  views.py
manga_app/migrations/: 0001_initial.py
manga_rater_project/: asgi.py  settings.py  urls.py  wsgi.py
manga_tests/: tests.py
templates/: base.html  manga_detail.html  manga_list.html
