[tool.poetry]
name = "django-manga-rater"
version = "0.1.0"
description = ""
authors = ["royce79-creator <connorsboyce07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
